force-app/main/default/objects/ZipCode__c/ZipCode__c.object-meta.xml
<CustomObject>
    <label>ZipCode</label>
    <nameField>
        <label>ZipCode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZipCode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>