force-app/main/default/objects/ZipCode__c/fields/country_abbreviation__c.field-meta.xml
<CustomField>
    <fullName>country_abbreviation__c</fullName>
    <label>country abbreviation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>