force-app/main/default/objects/ZipCode__c/fields/place_name__c.field-meta.xml
<CustomField>
    <fullName>place_name__c</fullName>
    <label>place name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>