force-app/main/default/objects/ZipCode__c/fields/Places__c.field-meta.xml
<CustomField>
    <fullName>Places__c</fullName>
    <label>Places</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>