force-app/main/default/objects/ZipCode__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <length>10</length>
    <type>Text</type>
</CustomField>