force-app/main/default/objects/ZipCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Places__Latitude__s</columns>
    <columns>Places__Longitude__s</columns>
    <columns>place_name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>